--- a/WordCounter/app/src/main/AndroidManifest.xml
+++ b/WordCounter/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".AboutActivity" />
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".WordcountActivity"></activity>
     </application>
 
 </manifest>
