--- a/WordCounter/app/src/main/AndroidManifest.xml
+++ b/WordCounter/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".AboutActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".WordcountActivity"></activity>
+        <activity android:name=".WordcountActivity" />
+        <activity android:name=".ConcordanceActivity"></activity>
     </application>
 
 </manifest>
